# mini-sast

./: .gitignore  Dockerfile  README.md  action.yml  pyproject.toml
example_files/: ast.py
src/: __main__.py
src/mini_sast/adapters/cli/: main.py
src/mini_sast/adapters/engines/: ast_engine.py  regex_engine.py
src/mini_sast/adapters/fs/: walker.py
src/mini_sast/adapters/reporters/: json_reporters.py
src/mini_sast/domain/: models.py
src/mini_sast/ports/: reporter.py  scanner.py
tests/: test_regex_engine.py
